# QD_experiment_control

./: CommandSetC11v027.wl  New equiptment starter.py  SDG6022X.py  pyproject.toml
Equiptment/: Agilent 33600A.py  MFF101_M.py  SDG6022X test.py  SDG6022X test_2.py  SDG6022X test_3.py  SDG6022X.py
Equiptment/Agilent33600/: AWG client.py  AWG daemon.py  Agilent 33600A.py  awg.yaml
Equiptment/Agilent33600/Labview/: A33ConfigureAM.vi  A33ConfigureARB.vi  A33ConfigureBurst.vi  A33ConfigureFSweep.vi  A33ConfigurePulse.vi  A33ConfigureTrigger.vi  A33ConfigureWFM.vi  A33Initialize.vi  A33LoadArbitraryVolat - Copy.vi  A33LoadArbitraryVolat.vi  A33OutputOnOff.vi  A33Trg.vi  ConfigurePRBS.vi
Equiptment/Agilent33600/Labview/Misc/: _A33LoadArbitraryVolat.vi  _ArbFilter.vi  _ConfigureFM.vi  _DGConfigureBurst.vi  _EraseAllArb.vi  _LoadSavedArbitrary.vi
Equiptment/Agilent33600A/: Agilent33600A.py  Labview python test.vi  VI equivalent functions.py
Equiptment/Agilent33600A/Labview/: A33ArbPhaseSync.vi  A33ClearArbitrary.vi  A33ConfigureARB_bk.vi  A33ConfigureFM.vi  A33PhaseSync.vi  A33ReadError.vi  ConfigureRamp.vi  ConfigureSquare.vi  LoadArbFrFile.vi  SaveArbToFile.vi
Equiptment/Agilent33600A/Labview/Misc/: _ConfFSweep.vi  _LoadArbitrary.vi  _tkafg3k Configure Burst.vi  _Копия LoadArbitrary.vi
Example labview python integration/: Test VI.vi
