[project]
name = "qd-experiment-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "numpy==2.3.5",
    "psutil==7.1.3",
    "pyvisa==1.15.0",
    "scipy==1.16.3",
    "pylablib==1.4.4",
    "pyqt5==5.15.11",
    "pyft232>=0.12",
]

[tool.uv]
required-environments = [
"sys_platform == 'win32'"
]
